Change Log for the qhy project

20140111:
	* project set up

