@@ -1,0 +1,7 @@
+#
+# Makefile.am -- build the documentation
+#
+# (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
+#
+doc:	Doxyfile
+	(cd ..; doxygen doc/Doxyfile)
