@@ -13,5 +13,8 @@ qhycooler_SOURCES = qhycooler.cpp
 qhycooler_DEPENDENCIES = ../lib/libqhyccd.la
 qhycooler_LDADD = -L../lib -lqhyccd
 
-test:	qhycooler
+test:	qhycamera
+	./qhycamera -d -b 4 -e 0.05 -p 0x6003 test.fits
+
+coolertest:	qhycooler
 	./qhycooler -d
