@@ -1,5 +1,9 @@
 Change Log for the qhy project
 
+20140114:
+	* add doxygen documentation
+	* Linux port
+
 20140111:
 	* project set up
 
